--- a/SnakeGameKZT.RestApi/SnakeGameKZT.RestApi.csproj
+++ b/SnakeGameKZT.RestApi/SnakeGameKZT.RestApi.csproj
@@ -23,4 +23,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\SnakeGame.ConsoleApp\SnakeGame.ConsoleApp.csproj" />
+	</ItemGroup>
+
 </Project>
