--- a/InventoryManagement.RestApi/InventoryManagement.RestApi.csproj
+++ b/InventoryManagement.RestApi/InventoryManagement.RestApi.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InventoryDB.Shared\InventoryDB.Shared.csproj" />
     <ProjectReference Include="..\InventoryManagement.Shared\InventoryManagement.Shared.csproj" />
-    <ProjectReference Include="..\InventoryManagementDB.shared\InventoryManagementDB.Shared.csproj" />
   </ItemGroup>
 
 </Project>
