--- a/InventoryManagement.Shared/InventoryManagement.Shared.csproj
+++ b/InventoryManagement.Shared/InventoryManagement.Shared.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Dapper" Version="2.1.35" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.20" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="RepoDb" Version="1.13.1" />
 		<PackageReference Include="RepoDb.SqlServer" Version="1.13.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
